styles/style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: "roboto", sans-serif;
}

body {
  height: auto;
  background-color: #eee;
}

.header {
  position: sticky;
  top: 0;
  left: 0;
  width: 100%;
  padding: 20px 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 100;
  background: #1b1b68;
}

.header-container {
  display: flex;
}
.logo {
  font-size: 32px;
  color: #fff;
  font-weight: 500;
  text-decoration: none;
  pointer-events: none;
}

.navbar a {
  position: relative;
  font-size: 18px;
  color: #fff;
  font-weight: 300;
  text-decoration: none;
  margin-left: 40px;
}

.navbar a::before {
  content: "";
  position: absolute;
  top: 100%;
  left: 0;
  width: 0;
  height: 3px;
  background-color: #fff;
  transition: 0.3s;
}

.navbar a:hover::before {
  width: 100%;
}

.flexbox {
  display: flex;
  flex-direction: column;
}

.hero-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 9rem;
  margin-bottom: 25rem;
}

#portrait {
  clip-path: circle();
  width: 525px;
  height: 375px;
}

.hero-header {
  width: 45rem;
  font-size: 24px;
  font-weight: 600;
  color: #3636b4;
}

#hero-header-one {
  font-size: 4rem;
  font-weight: 300;
}

#hero-header-two {
  font-size: 25px;
  font-weight: 300;
}

#nav-icon {
  display: flex;
  gap: 1.5rem;
}

#nav-icon a {
  color: #1b1b68;
  text-decoration: none;
  font-size: 25px;
}

#nav-icon a:hover {
  color: #3f3fcc;
}

.wrapper {
  display: flex;
  margin-bottom: 30rem;
}

.about-wrapper {
  display: flex;
  font-size: 20px;
  font-weight: 300;
  justify-content: center;
  gap: 5rem;
  padding-top: 9rem;
}

.about-wrapper-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  gap: 1.2rem;
}

#about-me-pic {
  width: 250px;
  border: 2px solid #000000;
}

.skills-wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  font-size: 20px;
  font-weight: 300;
  justify-content: center;
  align-items: center;
  gap: 1.2rem;
  padding-top: 9rem;
}

.skills-wrapper-img {
  display: flex;
  flex-wrap: wrap;
  gap: 3rem;
}

.skills-img {
  width: 150px;
  padding-top: 1rem;
}

.project-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  font-size: 20px;
  font-weight: 300;
  gap: 0.5rem;
  padding-top: 9rem;
}

.footer {
  background-color: #1b1b68;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 16px;
  font-weight: 300;
  color: #eee;
  gap: 5px;
}

#footer-icon a {
  color: #eee;
  text-decoration: none;
  padding-right: 10px;
  font-size: 22px;
}

#footer-icon a:hover {
  color: #3f3fcc;
}

#button-begone {
  visibility: hidden;
}

.sidebar,
.sidebar-hidden {
  visibility: hidden;
}

/* This applies when the screen size is 480px or less */
@media only screen and (max-width: 480px) {
  body {
    height: 100vh;
  }

  @supports (height: 100dvh) {
    body {
      height: 100dvh;
    }
  }
  .header {
    padding: 0px;
    flex-wrap: wrap;
    top: -1px;
    background-color: transparent;
    position: fixed;
  }
  .header-container {
    width: 100%;
    display: flex;
    background-color: #1b1b68;
    padding: 10px 0 20px 2px;
  }

  .logo {
    font-size: initial;
    width: 50%;
    font-size: 1.2rem;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .button-container {
    width: 50%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
  }

  /*Keeps the navbar's link hidden until the user clicks on the
    hamburger menu*/
  .navbar {
    display: none;
  }

  .navbar-active {
    display: flex;
    flex-direction: column;
    gap: 20px;
    visibility: visible;
    margin: auto;
    width: 50%;
    padding-bottom: 10px;
  }

  .navbar a {
    font-size: 18px;
    margin: auto;
  }

  .hero-container {
    flex-direction: column-reverse;
    margin-top: 13rem;
  }

  #hero-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
  }

  #hero-img {
    margin: auto;
    padding-top: 5rem;
    width: 100%;
    display: flex;
    justify-content: center;
  }

  #portrait {
    width: 100%;
    height: 350px;
    margin-bottom: 1.5rem;
  }

  .hero-header {
    width: initial;
  }

  #hero-header-one {
    font-size: 36px;
    display: flex;
    align-items: center;
  }

  #hero-header-two {
    font-size: 18px;
  }

  #nav-icon a {
    font-size: 30px;
  }

  #about-me-pic {
    width: 200px;
    height: 300px;
  }

  .about-wrapper {
    font-size: 19px;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    margin-bottom: 1rem;
    padding-top: 12rem;
  }

  .about-wrapper-header {
    padding-top: 1.2rem;
    width: 100%;
  }

  .about-wrapper-header p {
    display: flex;
    flex-wrap: wrap;
    width: 75%;
  }

  .skills-wrapper-img {
    justify-content: space-evenly;
  }

  .skills-img {
    width: 150px;
    padding-top: 1rem;
  }

  .project-wrapper {
    font-size: 20px;
  }

  .project-wrapper p {
    width: 85%;
  }

  .footer {
    padding: 20px 0px 20px 0px;
    font-size: 1.2rem;
  }

  #footer-icon a {
    font-size: 22px;
  }

  #button-begone {
    visibility: visible;
  }

  .sidebar {
    background-color: #1b1b68;
    transform: translateX(30rem);
    visibility: hidden;
    position: fixed;
  }

  .sidebar-active {
    visibility: visible;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    width: 100%;
    background-color: #474799;
    height: 100dvh;
    transition: 400ms ease-out;
    position: fixed;
    top: 0rem;
    z-index: -1;
  }

  .sidebar-hidden {
    visibility: visible;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    width: 100%;
    background-color: #474799;
    height: 100dvh;
    transform: translateX(30rem);
    transition: transform 400ms ease-in;
    position: fixed;
    top: 0rem;
    z-index: -1;
  }

  body:has(.sidebar-active) {
    overflow: hidden;
  }

  .sidebar-mobile {
    display: flex;
    flex-direction: column;
    width: 100%;
    font-size: 4rem;
    font-weight: 200;
    text-shadow: 2px 2px black;
    padding-bottom: 21rem;
  }

  .sidebar-mobile a {
    display: flex;
    justify-content: center;
    color: #eee;
    text-decoration: none;
  }
}

